src/objects/BMCServiceDesk__Category__c.object
<CustomObject>
    <description>This object allows you to store data for categories.</description>
    <fields>
        <fullName>BMCServiceDesk__Abbreviation__c</fullName>
        <inlineHelpText>Use this field to enter a short label that you want to assign to the category. When you create charts or reports, you can represent a category record by displaying this field in the chart or report.</inlineHelpText>
        <label>Abbreviation</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AvailableForChat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available for Chat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AvailableForIncidents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incidents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AvailableForServiceCatalog__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Requests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Category_Description__c</fullName>
        <inlineHelpText>Use this field to enter a category description that does not exceed 1000 characters. When users hover over this category in the Category tree, the description will be shown as a tooltip.</inlineHelpText>
        <label>Category Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Contains_Incident_children_categories__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contains Incident children categories</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Contains_SR_children_categories__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contains SR children categories</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Display_In_SelfService__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display In SelfService</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Export__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used internally to control trigger action configured for exporting category from RF Category Migration package.</description>
        <inlineHelpText>Select this field to allow the record to be exported from the RF Category Migration Pentaho package.</inlineHelpText>
        <label>Tag for Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKCategoryType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select the category type. Category type is used to group related categories which are commonly used for reporting purposes.</inlineHelpText>
        <label>Category Type</label>
        <referenceTo>BMCServiceDesk__CategoryTypes__c</referenceTo>
        <relationshipName>Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKContentImport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field forms a relationship between the Content Import object and the records imported in the Base Element, Request Definition, Template, Category, and Agreement objects. This field helps in tracking the imported record in the respective objects.</description>
        <label>Content Import</label>
        <referenceTo>BMCServiceDesk__ContentImport__c</referenceTo>
        <relationshipLabel>Categories</relationshipLabel>
        <relationshipName>Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKParentCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select the category that should be designated as the parent category. When a parent category is selected, the current category automatically becomes a child category to the selected parent category.</inlineHelpText>
        <label>Parent Category</label>
        <referenceTo>BMCServiceDesk__Category__c</referenceTo>
        <relationshipName>Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKUrgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select the urgency you want to assign when creating an incident with the category. The system administrator would assign a level of urgency to the category depending on the importance of the category.</inlineHelpText>
        <label>Urgency</label>
        <referenceTo>BMCServiceDesk__Urgency__c</referenceTo>
        <relationshipName>Categories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__HasChildren__c</fullName>
        <formula>IF(BMCServiceDesk__Contains_Incident_children_categories__c +  BMCServiceDesk__Contains_SR_children_categories__c &gt; 0, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Children</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UnAvailableForChangeRequests__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Requests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UnAvailableForProblems__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Problems</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UnAvailableForReleases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Releases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UnAvailableForTasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UnAvailableforBroadcasts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Broadcasts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UnderReview__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not selected by default. When the field is not selected, the imported records (records imported by using the Content Management tile) can be accessed by the system administrator only. The value of the field is set to True when the imported records are deployed to be accessed by users.</description>
        <label>Under Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__categoryType_Id__c</fullName>
        <formula>BMCServiceDesk__FKCategoryType__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the category type. Category type is used to group related categories which are commonly used for reporting purposes.</inlineHelpText>
        <label>Category Type~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__children__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Children</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__followUpAfter__c</fullName>
        <inlineHelpText>Use this field to enter the number of hours after an incident is closed that a follow-up should begin. This information is automatically added to the closing data of an incident assigned with the current category.</inlineHelpText>
        <label>After</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if the category record is no longer valid, but the record has to be retained for compliance with the records retention policy.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__parentCategory_Id__c</fullName>
        <formula>BMCServiceDesk__FKParentCategory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the category that should be designated as the parent category. When a parent category is selected, the current category automatically becomes a child category to the selected parent category.</inlineHelpText>
        <label>Parent Category~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__parentTree__c</fullName>
        <label>Parent Tree</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__requireFollowUp__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field to designate incidents for follow-up when the current category is assigned to an incident. These incidents are followed-up when the incident is closed. The follow-up time is specified in the After Hours field.</inlineHelpText>
        <label>Follow Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__urgency_Id__c</fullName>
        <formula>BMCServiceDesk__FKUrgency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the urgency you want to assign when creating an incident with the category. The system administrator would assign a level of urgency to the category depending on the importance of the category.</inlineHelpText>
        <label>Urgency~</label>
        <type>Text</type>
    </fields>
    <label>Category</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__FKParentCategory__c</columns>
        <columns>BMCServiceDesk__AvailableForIncidents__c</columns>
        <columns>BMCServiceDesk__AvailableForServiceCatalog__c</columns>
        <columns>BMCServiceDesk__Display_In_SelfService__c</columns>
        <columns>BMCServiceDesk__inactive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__CategoryId_Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISNULL(Name ) , ISBLANK(Name))</errorConditionFormula>
        <errorMessage>Please enter Category.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__Unique_Category_Id</fullName>
        <active>true</active>
        <errorConditionFormula>false</errorConditionFormula>
        <errorMessage>A record with this Category already exists. Enter a unique Category.</errorMessage>
    </validationRules>
</CustomObject>